// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@client @export tests should NOT refetch if an @export variable has not changed, the current fetch policy is not cache-only, and the query includes fields that need to be resolved remotely 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Missing field '%s' while writing result %o",
      "postCount",
      Object {
        "currentAuthorId": 101,
      },
    ],
    Array [
      "Missing field '%s' while writing result %o",
      "postCount",
      Object {
        "currentAuthorId": 100,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`@client @export tests should allow @client @export variables to be used with remote queries 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Missing field '%s' while writing result %o",
      "postCount",
      Object {
        "currentAuthor": Object {
          "__typename": "Author",
          "authorId": 100,
          "name": "John Smith",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`@client @export tests should refetch if an @export variable changes, the current fetch policy is not cache-only, and the query includes fields that need to be resolved remotely 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Missing field '%s' while writing result %o",
      "postCount",
      Object {
        "appContainer": Object {
          "__typename": "AppContainer",
          "systemDetails": Object {
            "__typename": "SystemDetails",
            "currentAuthor": Object {
              "__typename": "Author",
              "authorId": 100,
              "name": "John Smith",
            },
          },
        },
      },
    ],
    Array [
      "Missing field '%s' while writing result %o",
      "title",
      Object {
        "__typename": "Post",
        "id": 10,
        "loggedInReviewerId": 100,
      },
    ],
    Array [
      "Missing field '%s' while writing result %o",
      "reviewerDetails",
      Object {
        "postRequiringReview": Object {
          "__typename": "Post",
          "id": 10,
          "loggedInReviewerId": 100,
        },
      },
    ],
    Array [
      "Missing field '%s' while writing result %o",
      "id",
      Object {
        "__typename": "Post",
      },
    ],
    Array [
      "Missing field '%s' while writing result %o",
      "title",
      Object {
        "__typename": "Post",
      },
    ],
    Array [
      "Missing field '%s' while writing result %o",
      "reviewerDetails",
      Object {
        "postRequiringReview": Object {
          "__typename": "Post",
        },
      },
    ],
    Array [
      "Missing field '%s' while writing result %o",
      "post",
      Object {
        "primaryReviewerId": 100,
        "secondaryReviewerId": 200,
      },
    ],
    Array [
      "Missing field '%s' while writing result %o",
      "postCount",
      Object {
        "currentAuthorId": 100,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
